@startuml

package fr.ul.acl.model {

  abstract class Composant {
    #int posX
    #int posY
  }

  abstract class Dynamique {
    #void up()
    #void down()
    #void left()
    #void right()
  }

  class Heros {
    +void move(Plateau, Cmd)
  }

  class Jeu {
    +int hauteurPlateau()
    +int largeurPlateau()
  }

  class Plateau {
    -int hauteur
    -int largeur   
    +String getTypeCase(int, int)
    +boolean isAccesible(int, int)
  }

  abstract class Statique {
    -String type
    +{abstract} String getAffichage()
    +String getType()
  }
  
  class Mur
  
  Composant <|-- Dynamique
  Dynamique <|-- Heros
  Statique <|-- Mur
  Statique --|> Composant
  
  Jeu -- "1" Heros
  Jeu -- "1" Plateau

  Plateau -- "*" Statique
}

package fr.ul.acl.engine {

  interface Game {
    +void evolve(Cmd)
    +boolean isFinished()
  }
  
}

Game <|.. Jeu

hide empty members

@enduml